--- a/references.bib
+++ b/references.bib
@@ -43,3 +43,38 @@ url={https://www.pwc.com.au/banking-capital-markets/banking-matters/mba_banking_
 year={2019},
 publisher={PwC}
 }
+
+@article{c_callender_g_mason_does_2017,
+	title = {Does Student Loan Debt Deter Higher Education Participation? New Evidence from England},
+	volume = {671},
+	url = {https://journals.sagepub.com/doi/abs/10.1177/0002716217696041},
+	number = {1},
+	journaltitle = {Sage Journals},
+	author = {{C. Callender; G. Mason}},
+	date = {2017},
+}
+
+@misc{oecd_benefits_2018,
+	title = {Benefits of educational attainment},
+	publisher = {Australian Government, Department of Education},
+	author = {{OECD}},
+	date = {2018},
+}
+
+@report{preston_gender_2023,
+	location = {Crawley, Western Australia},
+	title = {Gender and Australia’s Higher Education Loan Program. The University of Western Australia},
+	url = {https://www.education.gov.au/system/files/documents/submission-file/2023-04/AUA_tranche2_Alison%20Preston.pdf},
+	institution = {Department of Economics {UWA} Business School},
+	type = {Submission to the Review of Australia’s Higher Education System},
+	author = {Preston, Alison},
+	date = {2023},
+}
+
+@report{universities_australia_2022_2022,
+	title = {2022 Higher Education Facts and Figures},
+	url = {https://www.universitiesaustralia.edu.au/wp-content/uploads/2022/09/220207-HE-Facts-and-Figures-2022_2.0.pdf},
+	institution = {Universities Australia},
+	author = {{Universities Australia}},
+	date = {2022},
+}
